Prevent extra padding below LLM feedback panel

--- a/src/scss/phy/questions.scss
+++ b/src/scss/phy/questions.scss
@@ -189,7 +189,7 @@ form:has(> .question-component), div.quiz-question-container:has(> .question-com
     background-color: initial;
   }
 
-  &:not(:has(.question-component > .validation-response-panel.correct)) {
+  &:not(:has(.question-component > .validation-response-panel.correct, .question-component.llm-feedback)) {
     padding-bottom: 1rem;
   }
 }
